# my-float

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
include/: float32.h  float64.h
src/: CMakeLists.txt  float32.cpp  float64.cpp
